# chunky

./: .gitignore  README.md  pyproject.toml
eval/: gt.json  run_eval.py
examples/assets/: text_files.json
examples/output/: On_the_Origin_of_Species.json  dead_salmon.json
scripts/: cli.py
src/chunky/: __init__.py  api.py  cli.py
src/chunky/components/: documents.py  embeddings.py  features.py  hmm.py  models.py  text.py
